--- a/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
+++ b/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
@@ -15,13 +15,14 @@
                 <consultant role="projectManager" xml:id="UT22084-059-001-4">Jed Forman</consultant>
                 <editor role="projectEditor" xml:id="UT22084-059-001-21">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-059-001-34">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-059-001-44">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-059-001"/>
                 <date/>
             </publicationStmt>
@@ -98,6 +99,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-28T12:48:11.671Z" type="text-version" status="0.0.13" xml:id="UT22084-059-001-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-10T09:20:03.532Z" type="text-version" status="0.0.14" xml:id="UT22084-059-001-45">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:04:23.164Z" type="translation-status" status="2.a" xml:id="UT22084-059-001-46">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:04:23.164Z" type="text-version" status="0.0.15" xml:id="UT22084-059-001-47">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
