--- a/translations/kangyur/translations/090-003_toh559-the_queen_of_incantations_the_great_peahen.xml
+++ b/translations/kangyur/translations/090-003_toh559-the_queen_of_incantations_the_great_peahen.xml
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-090-003-1862">DJKR, Herlintje, Hadi Widjaja, Lina Herlintje, Ocean Widjaja, Asia Widjaja, Star Widjaja and Gold Widjaja</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.10 <date>2024</date>
+                <edition>v 1.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -149,6 +149,9 @@
                 <change who="#andre" when="2024-06-26T07:33:21.368Z" type="text-version" status="1.0.10" xml:id="UT22084-090-003-1871">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-10-14T13:09:24.946Z" type="text-version" status="1.0.11" xml:id="UT22084-090-003-1872">
+                    <desc>updated Dharmacakra to Dharmachakra with respect to the translation group.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -157,7 +160,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
         <front>
-            <div type="summary">
+            <div type="summary" xml:id="UT22084-090-003-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-090-003-1"/>
                 <p tid="2">
@@ -178,7 +181,7 @@
                     members administering to the pragmatic medical needs of their own and
                     surrounding communities.</p>
             </div>
-            <div type="acknowledgment">
+            <div type="acknowledgment" xml:id="UT22084-090-003-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-090-003-2"/>
                 <p tid="4">Translated by the Dharmachakra Translation Committee under the guidance
@@ -193,7 +196,7 @@
                     the generous sponsorship of DJKR, Herlintje, Hadi Widjaja, Lina Herlintje, Ocean
                     Widjaja, Asia Widjaja, Star Widjaja and Gold Widjaja.</p>
             </div>
-            <div type="introduction">
+            <div type="introduction" xml:id="UT22084-090-003-introduction">
                 <head type="introduction" tid="8">Introduction</head>
                 <div type="section" xml:id="UT22084-090-003-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-090-003-6"/>
@@ -202,13 +205,13 @@
                             Peahen</title> (<title xml:lang="Sa-Ltn">Mahā­māyūrī­vidyārājñī</title>,
                         Toh 559) is the second scripture in a series of five, the other four being
                         the <title xml:lang="Sa-Ltn">Mahā­sāhasra­pramardanī Sūtra</title> (Toh
-                            558),<note place="end" xml:id="UT22084-090-003-7"> Dharmacakra
+                            558),<note place="end" xml:id="UT22084-090-003-7"> Dharmachakra
                             Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh558.html">Destroyer
                                     of the Great Trichiliocosm</ref>
                             </title>, Toh 558 (84000:
                             Translating the Words of the Buddha, 2016).</note>
-                        <title xml:lang="Sa-Ltn">Mahā­pratisarā­vidyārājñī</title> (Toh 561),<note place="end" xml:id="UT22084-090-003-1808"> Dharmacakra Translation
+                        <title xml:lang="Sa-Ltn">Mahā­pratisarā­vidyārājñī</title> (Toh 561),<note place="end" xml:id="UT22084-090-003-1808"> Dharmachakra Translation
                             Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh561.html">The Great
                                     Amulet</ref>
@@ -232,7 +235,7 @@
                             Tibetan translation provides the title <title xml:lang="Sa-Ltn">Mahā­mantrānudhārī</title> (<title xml:lang="Bo-Ltn">gsang sngags
                                 chen po rjes su ’dzin pa’i mdo</title>), which is essentially
                             synonymous with <title xml:lang="Sa-Ltn">Mahā­mantrānusāriṇī</title>. </note>
-                        <title xml:lang="Sa-Ltn">Sūtra</title> (Toh 563).<note place="end" xml:id="UT22084-090-003-10"> Dharmacakra Translation Committee, trans.,
+                        <title xml:lang="Sa-Ltn">Sūtra</title> (Toh 563).<note place="end" xml:id="UT22084-090-003-10"> Dharmachakra Translation Committee, trans.,
                                 <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh563.html">Great
                                     Upholder of the Secret Mantra</ref>
@@ -456,7 +459,7 @@
             </div>
         </front>
         <body>
-            <div type="translation">
+            <div type="translation" xml:id="UT22084-090-003-translation">
                 <head type="translation"> The Translation </head>
                 <head type="titleHon" tid="19">The Queen of Incantations</head>
                 <head type="titleMain" tid="20">The Great Peahen</head>
@@ -3682,7 +3685,7 @@
             </div>
         </body>
         <back>
-            <div type="notes">
+            <div type="notes" xml:id="UT22084-090-003-notes">
                 <head type="notes" tid="308">Notes</head>
                 <list type="abbreviations">
                     <head tid="309">Abbreviations</head>
@@ -3733,7 +3736,7 @@
                     </item>
                 </list>
             </div>
-            <div type="listBibl">
+            <div type="listBibl" xml:id="UT22084-090-003-listBibl">
                 <head type="listBibl" tid="310">Bibliography</head>
                 <div type="section" xml:id="UT22084-090-003-listBibl-1">
                     <head type="section" tid="311">Tibetan and Sanskrit Texts</head>
@@ -3847,7 +3850,7 @@
                         (Fall 2006): 89–123.</bibl>
                 </div>
             </div>
-            <div type="glossary">
+            <div type="glossary" xml:id="UT22084-090-003-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-090-003-674">
