--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-093-020-27">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -106,6 +106,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-26T09:26:41.024Z" type="text-version" status="0.0.13" xml:id="UT22084-093-020-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:30:03.888Z" type="translation-status" status="2.c" xml:id="UT22084-093-020-31">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:30:03.888Z" type="text-version" status="0.0.14" xml:id="UT22084-093-020-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
