--- a/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -12,13 +12,14 @@
                 <author role="translatorMain" xml:id="UT22084-093-021-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-093-021-9">Catherine Dalton</author>
                 <editor role="reviser" xml:id="UT22084-093-021-17">Torsten Gerloff</editor>
+                <editor role="copyEditor" xml:id="UT22084-093-021-28">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-093-021"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-26T09:30:00.697Z" type="text-version" status="0.0.11" xml:id="UT22084-093-021-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T09:30:56.435Z" type="text-version" status="0.0.12" xml:id="UT22084-093-021-29">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:33:23.119Z" type="translation-status" status="2.c" xml:id="UT22084-093-021-30">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:33:23.119Z" type="text-version" status="0.0.13" xml:id="UT22084-093-021-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
