--- a/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
+++ b/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
@@ -12,14 +12,15 @@
                 <author role="translatorMain" xml:id="UT22084-101-042-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-101-042-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-101-042-14">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-101-042-24">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-101-042"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +80,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T16:10:33.045Z" type="text-version" status="0.0.10" xml:id="UT22084-101-042-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-01T16:11:05.492Z" type="text-version" status="0.0.11" xml:id="UT22084-101-042-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:38:11.533Z" type="translation-status" status="2.c" xml:id="UT22084-101-042-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T13:38:11.533Z" type="text-version" status="0.0.12" xml:id="UT22084-101-042-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
