--- a/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -21,7 +21,7 @@
                 <sponsor xml:id="UT22084-087-011-71">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.9 <date>2024</date>
+                <edition>v 1.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -187,6 +187,9 @@
                 </change>
                 <change who="#celso" when="2024-10-10T21:46:14.302Z" type="text-version" status="1.0.9" xml:id="UT22084-087-011-113">
                     <desc>Corrected typo in bibliography</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-14T17:45:48.335Z" type="text-version" status="1.0.10" xml:id="UT22084-087-011-114">
+                    <desc>updated Dharmacakra to Dharmachakra with respect to the translation group.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
