--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
@@ -25,7 +25,7 @@
                 <sponsor xml:id="UT22084-064-002-1690">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.21 <date>2024</date>
+                <edition>v 1.1.22 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -215,6 +215,9 @@
                 <change who="#celso" when="2024-10-10T19:19:58.39Z" type="text-version" status="1.1.21" xml:id="UT22084-064-002-1750">
                     <desc>Activated pending links</desc>
                 </change>
+                <change who="#celso" when="2024-10-14T20:00:40.44Z" type="text-version" status="1.1.22" xml:id="UT22084-064-002-1751">
+                    <desc>Activated pending links</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -280,8 +283,7 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-064-002-1678"/>
                     <p tid="914">
-                        <title xml:lang="en">The Great Cloud</title> is also thematically related to <title xml:lang="en">The Golden
-                        Light</title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsa</title>, Toh 555–557),<note place="end" xml:id="UT22084-064-002-1746">
+                        <title xml:lang="en">The Great Cloud</title> is also thematically related to <title xml:lang="en">The Sūtra of the Sublime Golden Light</title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsa</title>, Toh 555–557),<note place="end" xml:id="UT22084-064-002-1746">
                             See Peter Alan Roberts, trans., <title xml:lang="en">The Sūtra of the Sublime Golden Light</title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottamasūtra</title>), <ref target="https://read.84000.co/translation/toh555.html">Toh 555</ref>, <ref target="https://read.84000.co/translation/toh556.html">556</ref>, and <ref target="https://read.84000.co/translation/toh557.html">557</ref> (84000: Translating the Words of the Buddha, 2023–24).
                         
                         </note> and a dialogue that occurs in chapter 37 between the
@@ -4235,7 +4237,7 @@
                     <milestone unit="chunk" xml:id="UT22084-064-002-567"/>
                     <p tid="584">The Licchavi youth Admired by All Worlds then replied to the brahmin Kauṇḍinya, the master grammarian, uttering these
                             verses:<note place="end" xml:id="UT22084-064-002-568"> This entire exchange between Kauṇḍinya and the Licchavi youth also
-                            appears in the <title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottama­sūtra</title> (<ref rend="pending" inst="markup add link to passage" target="http://read.84000.co/translation/toh556.html">Toh 556</ref>).</note>
+                                appears in <title xml:lang="en">The Sūtra of the Sublime Golden Light</title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottama­sūtra</title>, Toh 556), <ptr target="#UT22084-089-013-285"/>–<ptr target="#UT22084-089-013-310"/><!--2.42–2.62-->.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-064-002-569"/>
                     <lg tid="585">
@@ -6091,9 +6093,9 @@
                         <title xml:lang="Bo-Ltn">yongs su mya ngan las ’das pa chen po</title> (<title xml:lang="Sa-Ltn">Mahā­parinirvāṇa</title>). <ref rend="pending" target="http://read.84000.co/translation/toh120.html">Toh
                             120</ref>, Degé Kangyur vol. 54 (mdo sde, tha), folios 1.b–151.b.</bibl>
                     <bibl xml:id="UT22084-064-002-933">
-                        <title xml:lang="Bo-Ltn">gser ’od dam pa mdo sde’i dbang po’i rgyal po</title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottama­sūtrendra­rāja</title>). <ref rend="pending" target="http://read.84000.co/translation/toh556.html">Toh 556</ref>, Degé Kangyur vol. 89 (rgyud, pa), folios 151.b–273.a;
-                            <ref rend="pending" target="http://read.84000.co/translation/toh557.html">Toh 557</ref>, vol. 90 (rgyud, pha), folios
-                        1.b–62.a.</bibl>
+                        <title xml:lang="Bo-Ltn">gser ’od dam pa mdo sde’i dbang po’i rgyal po</title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottama­sūtrendra­rāja</title>). Toh 556, Degé Kangyur vol. 89 (rgyud, pa), folios 151.b–273.a;
+                            Toh 557, vol. 90 (rgyud, pha), folios
+                        1.b–62.a. English translations in Roberts 2024ab.</bibl>
                     <bibl xml:id="UT22084-064-002-934">Denkarma (<title xml:lang="Bo-Ltn">pho brang stod thang ldan</title>[<title xml:lang="Bo-Ltn">/lhan</title>] <title xml:lang="Bo-Ltn">dkar gyi chos ’gyur ro cog gi dkar chag</title>). Toh 4364, Degé Tengyur vol. 206
                         (sna tshogs, jo), folios 294.b–310.a.</bibl>
                     <bibl xml:id="UT22084-064-002-935">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ’phang thang ma</title>). Beijing: mi rigs dpe
