--- a/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
+++ b/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
@@ -6,12 +6,17 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Tantra of Vajrapātāla</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Vajrapātālatantra</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje sa 'og gi rgyud/</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje sa ’og gi rgyud/</title>
+                <title type="mainTitle" xml:lang="en">Vajrapātāla, The Great Sovereign Tantra of Vajrapāṇi</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrapātālanāmatantrarāja</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo rje sa 'og gi rgyud kyi rgyal po zhes bya ba/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa rdo rje sa ’og gi rgyud kyi rgyal po zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phyag na rdo rje’i rgyud kyi rgyal po chen po rdo rje sa ’og</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa phyag na rdo rje’i rgyud kyi rgyal po chen po rdo rje sa ’og ces bya ba/</title>
+                <author role="translatorMain" xml:id="UT22084-094-021-13">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-094-021-14">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -21,8 +26,8 @@
             <sourceDesc>
                 <bibl key="toh744" type="text">
                     <ref>Toh 744</ref>
-                    <biblScope>vol.94, ff.237r-265v(pp.473-530)</biblScope>
-                    <location work="UT4CZ5369" count-pages="58">
+                    <biblScope>vol.94, ff.237r-266r(pp.473-531)</biblScope>
+                    <location work="UT4CZ5369" count-pages="59">
                         <volume number="94" start-page="473" end-page="530"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
@@ -61,6 +66,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-10-11T07:36:51.219Z" type="text-version" status="0.0.4" xml:id="UT22084-094-021-12">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-11T07:48:36.736Z" type="text-version" status="0.0.5" xml:id="UT22084-094-021-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2024-10-15T09:50:26.855Z" type="text-version" status="0.0.6" xml:id="UT22084-094-021-16">
+                    <desc>Merged Toh 744a, which is part of the same text, into this TEI file.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
