--- a/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
+++ b/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
@@ -38,7 +38,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-073-439">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.18 <date>2024</date>
+                <edition>v 1.1.20 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -174,6 +174,12 @@
                 </change>
                 <change who="#celso" when="2024-10-01T13:18:53.45Z" type="text-version" status="1.1.18" xml:id="UT22084-091-073-475">
                     <desc>Removed empty Tibetan author statement</desc>
+                </change>
+                <change who="#celso" when="2024-10-02T01:32:56.985Z" type="text-version" status="1.1.19" xml:id="UT22084-091-073-476">
+                    <desc>corrected Skt field for mañjuśrīkumārabhūta</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-15T13:25:51.336Z" type="text-version" status="1.1.20" xml:id="UT22084-091-073-477">
+                    <desc>activated pending links</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1581,7 +1587,7 @@
                             texts, including the <title xml:lang="Sa-Ltn">Vajra­cchedikā</title>
                             (Toh 16<ref rend="pending" target="https://read.84000.co/translation/toh16.html"/>), <title xml:lang="Sa-Ltn">Aṣṭa­sāhasrikā</title> (Toh 12<ref rend="pending" target="https://read.84000.co/translation/toh12.html"/>), <title xml:lang="Sa-Ltn">Kāśyapa­parivarta</title> (Toh 87<ref rend="pending" target="https://read.84000.co/translation/toh87.html"/>), and <title xml:lang="Sa-Ltn">Suvarṇa­bhāsottama­sūtra</title>s
                                 (<ref target="https://read.84000.co/translation/toh555.html">Toh
-                                555</ref>, Toh 556<ref rend="pending" target="https://read.84000.co/translation/toh556.html"/>, <ref rend="pending" target="https://read.84000.co/translation/toh557.html"/>Toh 557). In
+                                    555</ref>, <ref target="https://read.84000.co/translation/toh556.html">Toh 556</ref>, <ref target="https://read.84000.co/translation/toh557.html">Toh 557</ref>). In
                             his detailed analysis of the use of the phrase, Schopen suggests (in
                             essence) that it should probably be understood as meaning that the place
                             where the written text in question is to be found becomes “like a stūpa”
@@ -2833,8 +2839,7 @@
                     <item>
                         <gloss type="person" xml:id="UT22084-091-073-277">
                             <term type="translationMain">Mañjuśrī Kumārabhūta</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mañjuśrī
-                                kumārabhūta</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mañjuśrī­kumāra­bhūta</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’jam dpal gzhon nur
                                 gyur pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཇམ་དཔལ་གཞོན་ནུར་གྱུར་པ།</term>
