--- a/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
+++ b/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
@@ -35,7 +35,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-044-004-382">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.15 <date>2024</date>
+                <edition>v 1.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -226,23 +226,26 @@
                 <change who="#andre" when="2024-06-28T14:51:56.825Z" type="text-version" status="1.0.15" xml:id="UT22084-044-004-436">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-10-15T13:30:08.696Z" type="text-version" status="1.0.16" xml:id="UT22084-044-004-439">
+                    <desc>activated pending links</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
         <front>
-            <div type="summary">
+            <div type="summary" xml:id="UT22084-044-004-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-044-004-1"/>
                 <p tid="2">Vimalaśraddhā, the daughter of King Prasenajit, comes to see the Buddha
-                    in Jetavana, Anātha­piṇḍada’s Park, together with a retinue of five hundred women. She pays homage to
-                    the Buddha and asks him to explain the conduct of bodhisattvas. The Buddha
-                    responds by presenting twelve sets of eight qualities that bodhisattvas should
-                    cultivate. Vimalaśraddhā and her five hundred companions, having developed the
-                    mind set on awakening, join the ranks of the bodhisattvas, and the Buddha
-                    prophesies her future attainment of awakening.</p>
+                    in Jetavana, Anātha­piṇḍada’s Park, together with a retinue of five hundred
+                    women. She pays homage to the Buddha and asks him to explain the conduct of
+                    bodhisattvas. The Buddha responds by presenting twelve sets of eight qualities
+                    that bodhisattvas should cultivate. Vimalaśraddhā and her five hundred
+                    companions, having developed the mind set on awakening, join the ranks of the
+                    bodhisattvas, and the Buddha prophesies her future attainment of awakening.</p>
             </div>
-            <div type="acknowledgment">
+            <div type="acknowledgment" xml:id="UT22084-044-004-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-044-004-2"/>
                 <p tid="4">The text was translated by Maurizio Pontiggia and edited by Chryse
@@ -254,7 +257,7 @@
                 <p tid="5">The translation was completed under the patronage and supervision of
                     84000: Translating the Words of the Buddha.</p>
             </div>
-            <div type="introduction">
+            <div type="introduction" xml:id="UT22084-044-004-introduction">
                 <head type="introduction" tid="8">Introduction</head>
                 <div type="section" xml:id="UT22084-044-004-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-044-004-6"/>
@@ -267,16 +270,16 @@
                         benefits that come from such cultivation.</p>
                     <milestone unit="chunk" xml:id="UT22084-044-004-8"/>
                     <p tid="11">The sūtra begins with the princess Vimalaśraddhā, daughter of King
-                        Prasenajit, coming to see the Buddha in Jetavana, Anātha­piṇḍada’s Park, together with a retinue of
-                        five hundred women. In some expressive verses, she pays homage to the Buddha
-                        and asks him to explain the conduct of bodhisattvas. The Buddha responds by
-                        presenting twelve sets of eight qualities that bodhisattvas should
-                        cultivate. Vimalaśraddhā then asks the Buddha how a woman may avoid female
-                        rebirth, to which the Buddha replies by presenting two further sets of eight
-                        qualities that ensure rebirth as a man. Finally, Vimalaśraddhā and her five
-                        hundred companions, having developed the mind set on awakening, join the
-                        ranks of the bodhisattvas, and the Buddha prophesies her future attainment
-                        of awakening.</p>
+                        Prasenajit, coming to see the Buddha in Jetavana, Anātha­piṇḍada’s Park,
+                        together with a retinue of five hundred women. In some expressive verses,
+                        she pays homage to the Buddha and asks him to explain the conduct of
+                        bodhisattvas. The Buddha responds by presenting twelve sets of eight
+                        qualities that bodhisattvas should cultivate. Vimalaśraddhā then asks the
+                        Buddha how a woman may avoid female rebirth, to which the Buddha replies by
+                        presenting two further sets of eight qualities that ensure rebirth as a man.
+                        Finally, Vimalaśraddhā and her five hundred companions, having developed the
+                        mind set on awakening, join the ranks of the bodhisattvas, and the Buddha
+                        prophesies her future attainment of awakening.</p>
                     <milestone unit="chunk" xml:id="UT22084-044-004-9"/>
                     <p tid="12">The Buddha’s explanations of how bodhisattvas should act, set out in
                         short prose sections followed by sets of verses, are, of course, the main
@@ -329,9 +332,11 @@
                             Śrīmala­devī</title> are all daughters of Prasenajit, they are not the
                         only princesses who are also bodhisattvas in the canonical texts. One
                         daughter of King Ajātaśatru, Aśoka­dattā, receives her prediction of future
-                        awakening in the <title xml:lang="Sa-Ltn">
-                            <ref rend="pending" target="https://read.84000.co/translation/toh76.html">Aśoka­dattā­vyākaraṇa</ref>
-                        </title> (Toh 76, also in the Heap of
+                        awakening in the <title xml:lang="Sa-Ltn">Aśoka­dattā­vyākaraṇa</title>
+                        <note place="end" xml:id="UT22084-044-004-437">See  UCSB Buddhist Studies Translation Group, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh76.html">Aśokadattā’s Prophecy</ref>
+                            </title>, Toh 76 (84000: Translating
+                            the Words of the Buddha, 2024).</note> (Toh 76, also in the Heap of
                         Jewels), and another, Vimala­prabhā, in the <title xml:lang="Sa-Ltn">
                             <ref rend="pending" target="https://read.84000.co/translation/toh168.html">Vimala­prabhā­paripṛcchā</ref>
                         </title> (Toh 168, in the General
@@ -342,10 +347,12 @@
                                     Prophecy of Kṣemavatī</ref>
                             </title>, Toh 192 (84000: Translating
                             the Words of the Buddha, 2022).</note> Less privileged female
-                        bodhisattvas include laywomen, the main interlocutors in the <title xml:lang="Sa-Ltn">Gaṅgottarā­paripṛcchā</title> (Toh 75),<note place="end" xml:id="UT22084-044-004-432">See 84000 Translation Team, trans., <title xml:lang="en">
-                                <ref target="https://read.84000.co/translation/toh75.html">The Questions of Gaṅgottarā</ref>
-                            </title> (Toh 75), 2024.</note> the <title xml:lang="Sa-Ltn">Strīvivarta­vyākaraṇa</title> (Toh 190),<note place="end" xml:id="UT22084-044-004-367">See Dharmachakra Translation
-                            Committee, trans., <title xml:lang="en">
+                        bodhisattvas include laywomen, the main interlocutors in the <title xml:lang="Sa-Ltn">Gaṅgottarā­paripṛcchā</title> (Toh 75),<note place="end" xml:id="UT22084-044-004-432">See 84000 Translation Team,
+                            trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh75.html">The
+                                    Questions of Gaṅgottarā</ref>
+                            </title> (Toh 75), 2024.</note> the <title xml:lang="Sa-Ltn">Strīvivarta­vyākaraṇa</title> (Toh 190),<note place="end" xml:id="UT22084-044-004-367">See Dharmachakra Translation Committee,
+                            trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh190.html">The
                                     Prophecy Concerning Strīvivarta</ref>
                             </title> (Toh 190), 2021.</note> and the <title xml:lang="Sa-Ltn">Mahallikā­paripṛcchā</title> (Toh 171);<note place="end" xml:id="UT22084-044-004-366">See Sakya Pandita Translation Group,
@@ -440,7 +447,7 @@
             </div>
         </front>
         <body>
-            <div type="translation">
+            <div type="translation" xml:id="UT22084-044-004-translation">
                 <head type="translation"> The Translation </head>
                 <head type="titleHon" tid="17">The Noble Mahāyāna Sūtra</head>
                 <head type="titleMain" tid="18">The Questions of the Girl Vimalaśraddhā</head>
@@ -451,7 +458,8 @@
                         Homage to all the buddhas and bodhisattvas!</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-044-004-23"/>
-                    <p tid="24">Thus did I hear at one time. The Blessed One was residing in Śrāvastī, in Jetavana, Anātha­piṇḍada’s park, together with a large assembly
+                    <p tid="24">Thus did I hear at one time. The Blessed One was residing in
+                        Śrāvastī, in Jetavana, Anātha­piṇḍada’s park, together with a large assembly
                         of five hundred bhikṣus and eight thousand bodhisattva mahāsattvas who were
                         well versed in all fields of knowledge, had obtained retention and unimpeded
                         eloquence, were fully accomplished in patience, were completely victorious
@@ -504,9 +512,9 @@
                         of whom wore golden jewelry. Having prostrated herself, bowing her head to
                         the feet of the Blessed One,<note place="end" xml:id="UT22084-044-004-33">
                             The Chinese version has <foreign xml:lang="zh" type="quote">至如來所頂禮佛足</foreign> (“Reaching the Thus-Gone One, she prostrated at
-                            his feet…”).</note> she circumambulated him three times. Then,
-                        after sitting down to one side before the Blessed One, she praised him with
-                        these verses: <ref cRef="F.96.a" type="folio" xml:id="UT22084-044-004-342"/>
+                            his feet…”).</note> she circumambulated him three times. Then, after
+                        sitting down to one side before the Blessed One, she praised him with these
+                        verses: <ref cRef="F.96.a" type="folio" xml:id="UT22084-044-004-342"/>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-044-004-34"/>
                     <lg tid="27">
@@ -1781,10 +1789,10 @@
             </div>
         </body>
         <back>
-            <div type="notes">
+            <div type="notes" xml:id="UT22084-044-004-notes">
                 <head type="notes" tid="164">Notes</head>
             </div>
-            <div type="listBibl">
+            <div type="listBibl" xml:id="UT22084-044-004-listBibl">
                 <head type="listBibl" tid="166">Bibliography</head>
                 <div type="section" xml:id="UT22084-044-004-listBibl-1">
                     <bibl xml:id="UT22084-044-004-268">
@@ -1817,12 +1825,13 @@
                             Nikāya</title>. Translated by Bhikkhu Bodhi. Boston: Wisdom Publications, 2012.</bibl>
                     <bibl xml:id="UT22084-044-004-360">Anālayo, Bhikkhu. <title xml:lang="en">Superiority Conceit in Buddhist Traditions: A Historical
                             Perspective</title>. Somerville, MA: Wisdom Publications, 2021.</bibl>-->
-                    
+
                     <bibl xml:id="UT22084-044-004-433">84000 Translation Team, trans. <title xml:lang="en">
-                        <ref target="https://read.84000.co/translation/toh75.html">The Sūtra of Gaṅgottara’s Questions</ref>
-                    </title> (<title xml:lang="Sa-Ltn">Gaṅgottara­paripṛcchā­sūtra</title>, Toh 75). 84000: Translating the Words of the Buddha,
-                        2024.</bibl>
-                    
+                            <ref target="https://read.84000.co/translation/toh75.html">The Sūtra of
+                                Gaṅgottara’s Questions</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Gaṅgottara­paripṛcchā­sūtra</title>, Toh
+                        75). 84000: Translating the Words of the Buddha, 2024.</bibl>
+
                     <bibl xml:id="UT22084-044-004-369">Braarvig, Jens Erland, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh96.html">The
                                 Miraculous Play of Mañjuśrī</ref>
@@ -1851,13 +1860,17 @@
                         2020 (free eBook).</bibl>-->
                     <bibl xml:id="UT22084-044-004-371">Subhashita Translation Group, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh192.html">The Prophecy
-                                of Kṣemavatī</ref>
-                        </title> (Toh 192). 84000: Translating the Words
+                        of Kṣemavatī</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Kṣemavatī­vyākaraṇa</title>, Toh 192). 84000: Translating the Words
                         of the Buddha, 2022.</bibl>
+                    <bibl xml:id="UT22084-044-004-438">UCSB Buddhist Studies Translation Group, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh76.html">Aśokadattā’s Prophecy</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Aśoka­dattāvyākaraṇa</title>, Toh 76). 84000: Translating the Words
+                        of the Buddha, 2024.</bibl>
                 </div>
 
             </div>
-            <div type="glossary">
+            <div type="glossary" xml:id="UT22084-044-004-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-044-004-363">
@@ -2224,11 +2237,13 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">pratyekabuddha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rang rgyal</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རང་རྒྱལ།</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="2">rang sangs rgyas</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="2">rang sangs
+                                rgyas</term>
                             <term xml:lang="bo" type="attestedSource" n="2">རང་སངས་རྒྱས།</term>
                             <term xml:lang="zh" type="attestedSource">緣覺</term>
                             <note type="definition">
-                                <p>Those who, in times when there is no buddha, reach enlightenment on their own, but do not teach the Dharma to others.</p>
+                                <p>Those who, in times when there is no buddha, reach enlightenment
+                                    on their own, but do not teach the Dharma to others.</p>
                             </note>
                         </gloss>
                     </item>
@@ -2702,8 +2717,10 @@
                     <item>
                         <gloss xml:id="UT22084-044-004-435" type="place" mode="match">
                             <term type="translationMain">Jetavana, Anātha­piṇḍada’s Park</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam
+                                anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra
+                                ba</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
