--- a/translations/kangyur/translations/051-001_toh113-sutra_of_the_white_lotus_of_true_dharma.xml
+++ b/translations/kangyur/translations/051-001_toh113-sutra_of_the_white_lotus_of_true_dharma.xml
@@ -34,7 +34,7 @@
                 <sponsor xml:id="UT22084-051-001-6378">May &amp; George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.18 <date>2024</date>
+                <edition>v 1.2.19 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -223,6 +223,9 @@
                 </change>
                 <change who="#celso" when="2024-10-14T21:07:15.315Z" type="text-version" status="1.2.18" xml:id="UT22084-051-001-6430">
                     <desc>Activated pending links</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-15T13:32:42.325Z" type="text-version" status="1.2.19" xml:id="UT22084-051-001-6431">
+                    <desc>activated pending links</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -20601,7 +20604,7 @@
                             (2021)</ref>.</bibl>
                     <bibl xml:id="UT22084-051-001-3111">
                         <title xml:lang="Bo-Ltn">gser ’od dam pa’i mdo</title> (<title xml:lang="Sa-Ltn">
-                            <ref rend="pending" target="https://read.84000.co/translation/toh556.html">Su­varṇa­prabhā­sūtra</ref>
+                            <ref target="https://read.84000.co/translation/toh556.html">Su­varṇa­prabhā­sūtra</ref>
                         </title>) [<title xml:lang="en">The
                             Golden Light Sūtra</title>]. Toh 556, Degé Kangyur vol. 89 (rgyud, pa),
                         folios 151b–273a. English translation in <ref target="https://read.84000.co/translation/toh556.html">Roberts (2024)</ref>.</bibl>
